# Yilin-Rust-CLI-Binary-with-SQLite

./: Cargo.toml  Makefile  README.md  products.db  sample.csv
.github/workflows/: build.yml
src/: lib.rs  main.rs
tests/: test_main.rs
