[package]
name = "YILIN-RUST-CLI-BINARY-WITH-SQLITE"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.26.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.5"  # check for the latest version
csv = "1.1"  # for CSV handling

