[package]
name = "Project2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rusqlite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "2.33.3", features = [] }
tempdir = "0.3.5"

[[test]]
name = "test_main"
path = "tests/test_main.rs"

